[gd_scene load_steps=2 format=3 uid="uid://t4kcdygpjtf7"]

[ext_resource type="Script" path="res://Scenes/Bullet/BulletSpawner.gd" id="1_crd02"]

[node name="BulletSpawner" type="Marker2D"]
script = ExtResource("1_crd02")

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="TurnsTimer" type="Timer" parent="."]
one_shot = true

[node name="SoundPlayer" type="AudioStreamPlayer" parent="."]
bus = &"SFX"
